# code-orb

./: .gitignore  .gitmodules  README.md  meson.build
.github/workflows/: arm-and-mingw.yml  cross.yml  freebsd.yml  linux-native.yml  linux.yml  macos-native.yml  macos.yml  windows-native.yml  windows.yml
doc/notes/: notes-gdb.txt
doc/notes/log/: echo.sh
doc/res/: codeorb.desktop  codeorb.service
doc/system/: SingleWireScheduling.pu  byte-process_states_1.pu  byte-process_states_2.pu  data-receive_interface.pu  data-receive_states_1.pu  data-receive_states_2.pu  flow-pressure.pu  motivation.pu  overview-gw.pu  overview-gw_lvl.pu  setup-testing.pu  states-main.pu  stm32-uart_3.pu  structure-dbg-internal.pu  topology.pu  transfer-quad.pu  transfer-quad.pu.pu
doc/system/communication/: A1_swt-target-to-ctrl_log.pu  A3_swt-target-to-ctrl_proc.pu  A4_swt-target-to-ctrl_cut.pu  A5_swt-target-to-ctrl_timeout.pu  B0_swt-ctrl-to-target_cmd.pu  B1_swt-ctrl-to-target_cmd_cmd-resp.pu
doc/system/protocol/: A0_swt-target-to-ctrl_none.pu  A0_swt-target-to-sched_none.pu  A1_swt-target-to-ctrl_log.pu  A1_swt-target-to-ctrl_proc.pu  A1_swt-target-to-sched_proc.pu  A2_swt-target-to-ctrl_cmd-resp.pu  A2_swt-target-to-ctrl_log.pu  A2_swt-target-to-sched_log.pu  A3_swt-target-to-ctrl_cmd-resp.pu  A3_swt-target-to-ctrl_proc.pu  A3_swt-target-to-sched_cmd-resp.pu  A4_swt-target-to-ctrl_cut.pu  A4_swt-target-to-sched_cut.pu  A5_swt-target-to-ctrl_timeout.pu  A5_swt-target-to-sched_timeout.pu  A6_swt-target-to-sched_unsolicited_1.pu  A6_swt-target-to-sched_unsolicited_2.pu  B0_swt-ctrl-to-target_cmd.pu  B0_swt-sched-to-target_cmd.pu  B1_swt-ctrl-to-target_cmd_cmd-resp.pu  B1_swt-sched-to-target_cmd_cmd-resp.pu
src/: ColorTesting.cpp  ColorTesting.h  GwMsgDispatching.cpp  GwMsgDispatching.h  GwSupervising.cpp  GwSupervising.h  InfoGathering.cpp  InfoGathering.h  LibSingleWireScheduling.cpp  LibUart.cpp  LibUart.h  RemoteCommanding.cpp  RemoteCommanding.h  SingleWireControlling.cpp  SingleWireControlling.h  SingleWireRequesting.cpp  SingleWireRequesting.h  SingleWireScheduling.cpp  SingleWireScheduling.h  TelnetFiltering.cpp  TelnetFiltering.h  codeorb.rc  env.h  main.cpp
start/: callgrind1.sh  default.sh  massif1.sh  memcheck.sh  valgrind.sh  valgrind_suppressions.txt
tools/: cppcheck.sh
tools-dev/: cppcheck.sh  cppcheck_single.sh  list-files.txt
tools-dev/cross/: meson-cross-arm.txt  meson-cross-mingw.txt  meson-cross-musl.txt  meson-cross-riscv.txt  meson-cross-win64.txt
tools-dev/start/: callgrind1.sh  callgrind2.sh  default.sh  massif1.sh  massif2.sh  memcheck.sh  valgrind.sh
tools/core-dump/: coreDebug.sh
tools/start/: callgrind2.sh  massif1.sh  massif2.sh  memcheck.sh  valgrind.sh
